checker/tests/parsing/errors/literal_with_struct.mft
type T {
  f: "x" {};
}
=== error ===
Unrecognized token `{` found at 18:19
Expected one of ";" or "|"